# chatgpt-saved-session-to-markdown

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: auto-create-milestones.yml  ci.yml  codeql.yml  dependabot.yml  release-on-tag.yml
src/chatgpt_saved_session_to_markdown/: __init__.py  cli.py  extractor.py
tests/: __init__.py  run_e2e_test.py  run_e2e_tests.py  test_copilot_e2e.py  test_copilot_e2e_test.py
tests/data/: Microsoft Copilot_ Ihr KI-Begleiter-part0.md  Microsoft Copilot_ Ihr KI-Begleiter.html  Microsoft Copilot_ Ihr KI-Begleiter.mhtml  Microsoft Copilot_ Ihr KI-Begleiter.mhtml.license
