# Copyright (C) 2025 Torsten Knodt and contributors
# GNU General Public License
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "chatgpt-saved-session-to-markdown"
description = "Convert ChatGPT HTML/MHTML/PDF exports to clean Markdown dialogues."
readme = "README.md"
keywords = [ "chatgpt", "cli", "export", "html", "markdown", "mhtml", "pdf" ]
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "Torsten Knodt", email = "torsten.knodt+com.github.datas-world.chatgpt-saved-session-to-markdown@datas-world.de" },
]
requires-python = ">=3.12"
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Markup :: Markdown",
]

dynamic = [ "version" ]
dependencies = [
  "beautifulsoup4>=4.12",
  "lxml>=5",
  "markdownify>=0.13",
  "pypdf>=5",
  "rich>=13",
]

optional-dependencies.dev = [
  "bandit>=1.7.7",
  "black>=24",
  "interrogate>=1.7",
  "isort>=5.13",
  "mdformat>=0.7.19",            # + markdown formatting
  "mdformat-frontmatter>=2.0.3",
  "mdformat-gfm>=0.3.5",
  "mypy>=1.10",
  "pip-audit>=2.7.3",            # + vulnerability audit
  "pre-commit>=3.7",
  "pydocstyle>=6.3",
  "pyproject-fmt>=1.8",          # + pyproject formatting
  "pytest>=8",
  "pytest-cov>=5",
  "reuse>=4.0.3",                # + REUSE CLI
  "ruff>=0.5",
  "semver>=3",
]
scripts.chatgpt-saved-session-to-markdown = "chatgpt_saved_session_to_markdown.cli:main"

[tool.hatch.version]
source = "vcs"                                                                                                                                                                                                               # <-- take version from git
tag-pattern = '^(?P<version>(0|[1-9]\\d*)\\.(0|[1-9]\\d*)\\.(0|[1-9]\\d*)(?:-((?:0|[1-9]\\d*|\\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\\.(?:0|[1-9]\\d*|\\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\\+([0-9a-zA-Z-]+(?:\\.[0-9a-zA-Z-]+)*))?)$'

[tool.hatch.build.hooks.vcs]
version-file = "src/chatgpt_saved_session_to_markdown/_version.py" # hatch writes __version__ here on build

[tool.black]
line-length = 100

[tool.ruff]
target-version = "py312"

line-length = 100
lint.select = [ "B", "C4", "D", "E", "F", "I", "N", "PLC", "PLE", "PLW", "RUF", "SIM", "TID", "UP" ]
lint.ignore = [ "B008" ]                                                                             # Allow typer function calls in defaults
lint.pydocstyle.convention = "google"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
plugins = [  ]

[tool.bandit]
skips = [ "B404", "B603", "B607" ] # Skip subprocess import and execution warnings for test files
exclude_dirs = [ "tests" ]

[tool.bandit.assert_used]
skips = [ 'tests/*_tests.py', 'tests/test_*.py' ]

[tool.interrogate]
fail-under = 100
verbose = 1
exclude = [ "tests", "docs" ]
